--- a/client/src/Form.css
+++ b/client/src/Form.css
@@ -17,9 +17,11 @@
 }
 
 .loginBox {
+  margin: 0px auto;
+  width: 30%;
   border-radius: 25px;
   background-color: white;
-  padding: 40px;
+  padding: 20px;
   box-shadow: 10px 15px 15px 1px #2c2b2b60;
 }
 
